syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "service/v1;proto";

message LoginResponse {
    string token = 1;
}

message User {
    string id = 1;
    string display_name = 2;
}

message GroupRequest {
    string name = 1;
    User user = 2;
}

message ChannelResponse {
    repeated string name = 1;
}

message Message {
    string id = 1;
    User user = 2;
    string text = 3;
    string address = 4;
    bool group = 5;
    google.protobuf.Timestamp timestamp = 6;
}

message Close{}

service Messenger {
    rpc Login(User) returns (LoginResponse) {}
    rpc Logout(User) returns (Close) {}
    rpc CreateStream(User) returns (stream Message);
    rpc SendMessage(Message) returns (Close);
    rpc CreateGroupChat(GroupRequest) returns (Close);
    rpc JoinGroupChat(GroupRequest) returns (Close);
    rpc LeftGroupChat(GroupRequest) returns (Close);
    rpc ListChannels(User) returns (ChannelResponse);
}